--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="99" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobiri.se/t">amp templates</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="99" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -87,7 +87,7 @@
                   <h3 class="mbr-section-title display-2">Aimee Dastin-van Rijn</h3>
                   <div class="lead">
 
-                    <p>Aimee is the founder and website designer of The Lion's Tale. She is also a writer for the paper, the quiz maker, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School<br>- St. John's Fashion Shoot<br>- IB Seniors' Final Art Show</p>
+                    <p>Aimee is the founder and website designer of The Lion's Tale. She is also a writer for the paper, the quiz maker, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School<br>- St. John's Fashion Shoot<br>- IB Seniors' Final Art Show<br>- The 2018-2019 Guide to St, John's</p>
 
                   </div>
 
