--- a/Arts.html
+++ b/Arts.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="239" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/c">free website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="239" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -130,12 +130,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-600x450.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-2-600x400.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">"Ship of Fools" Exhibition</h4>
-                        <h5 class="card-subtitle">Written By: Anna Hilton-Ibold</h5>
-                        <p class="card-text">An article about the featured artist, Leon De Bliquy, at the school's very own Greene Gallery.</p>
-                        <div class="card-btn"><a href="page32.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Informal Tips for the Beginner/Intermediate Guitarist&nbsp;</h4>
+                        <h5 class="card-subtitle">Written By: Isaiah Lowney</h5>
+                        <p class="card-text">Isaiah's tips for the amateur guitarist</p>
+                        <div class="card-btn"><a href="page65.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
