--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">free html site templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/q">responsive web templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -105,12 +105,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1-1618x1080.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-2-600x400.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Christianity and the LGBTQ+ Community</h4>
-                        <h5 class="card-subtitle">Written By: Miriam Laanemäe</h5>
-                        <p class="card-text">How the two relate and how to retain your faith while being <br>open-minded.<br><br></p>
-                        <div class="card-btn"><a href="page55.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Informal Tips for the Beginner/Intermediate Guitarist&nbsp;</h4>
+                        <h5 class="card-subtitle">Written By: Isaiah Lowney</h5>
+                        <p class="card-text">Isaiah's Tips for the Amateur Guitarist</p>
+                        <div class="card-btn"><a href="page65.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
