--- a/page24.html
+++ b/page24.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">html site templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-67" data-rv-view="423" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-67" data-rv-view="423" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
