--- a/page46.html
+++ b/page46.html
@@ -50,7 +50,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="Qw/GOnuLJiSJhdvKtMXfkSNaGtmgR4AFlPC1TErlKAE9dBDstE6u1m9BzzU9fR665Q4IrED7jUYFNF4gdoHH/rMQt33AuxlmpPcb7nLoL9TePt31ZMOez07Pwe6hBtzZ" data-form-email="true">
+                        <input type="hidden" value="sV4LT4cKB1QlIaMRHnbAB9bynrtUXgSY7ymjQ2QgLVrzFiowI+kUUezBszIdGZ5yqYwUzku9PXNMdesFoDyYZM49GrlreDClBou9284wEOBvUeJ0DkitVDT/QwgO7zZa" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">how to develop own website</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fn" data-rv-view="1029" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap html templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fn" data-rv-view="1029" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
