--- a/page35.html
+++ b/page35.html
@@ -50,7 +50,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="vCSkODvBKkTeyzI6UHR2aR6gRZ8IHaIVcdMX9vb6i4KOJ9sZq9HUXZnn5rcNLW8F9t5OQFzEOa2TkoLNE24VplZWQcE12P4OUyqazmn0p1PFOstXr+UISdMnkBV43NuL" data-form-email="true">
+                        <input type="hidden" value="Z5iyiT0oJH8ad8vc4n16mWo2Lsp8Br+jCXeOFZB3tzmP8xTm44jHyJ3R/L5JTXWDZJYRen1bVm5Fq1R6U5QWXf5dSSLHshZzsIDcva018jx1HGdbb5cTVkObB9iVn/tf" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create your own web page</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="682" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobiri.se/f">simple web maker</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="682" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
