--- a/page65.html
+++ b/page65.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a site</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-kp" data-rv-view="3575" style="background-image: url(assets/images/mbr-1920x1079.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobiri.se/f">simple site creator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-kp" data-rv-view="3575" style="background-image: url(assets/images/mbr-1920x1079.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -84,7 +84,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><img src="assets/images/mbr-1400x927.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/mbr-6-1400x933.jpg"></div>
               </div>
 
             </div>
