--- a/page58.html
+++ b/page58.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-j0" data-rv-view="1427">
+  <section id="menu-j0" data-rv-view="1539">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">bootstrap theme</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1431" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobiri.se/b">how to create a site for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1543" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -86,7 +86,7 @@
 
 </section>
 
-<div id="custom-html-j3" custom-code="true" data-rv-view="1434"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-j3" custom-code="true" data-rv-view="1546"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -391,7 +391,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1429" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1541" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
