--- a/page37.html
+++ b/page37.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-cu" data-rv-view="816">
+  <section id="menu-cu" data-rv-view="1026">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">simple website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader11 mbr-after-navbar" id="extHeader11-d2" data-rv-view="820" style="background-image: url(assets/images/fotojet-8-1000x667.jpg);">
+<section class="engine"><a href="https://mobiri.se/q">responsive web templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader11 mbr-after-navbar" id="extHeader11-d2" data-rv-view="1030" style="background-image: url(assets/images/fotojet-8-1000x667.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);">
     </div>
@@ -83,7 +83,7 @@
     <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#content1-cx"><i class="mbr-arrow-icon"></i></a></div>                 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-cx" data-rv-view="823" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-cx" data-rv-view="1033" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -93,7 +93,7 @@
 
 </section>
 
-<section class="mbr-section" id="msg-box5-d6" data-rv-view="825" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-d6" data-rv-view="1035" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -123,7 +123,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-cz" data-rv-view="828" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-cz" data-rv-view="1038" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -133,7 +133,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-d0" data-rv-view="830" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-d0" data-rv-view="1040" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -144,7 +144,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-d1" data-rv-view="832" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-d1" data-rv-view="1042" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -154,7 +154,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-cv" data-rv-view="818" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-cv" data-rv-view="1028" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
