--- a/page26.html
+++ b/page26.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">how to create your own web page</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="192" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="192" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
