--- a/page27.html
+++ b/page27.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-7q" data-rv-view="271" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-7q" data-rv-view="271" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 1; background-color: rgb(145, 189, 174);">
     </div>
