--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">simple website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -131,12 +131,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x801.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/official-portrait-amb-gidwitz-s-cleared-by-amb-0711-600x725.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">The Unspoken Stresses <br>of the IB</h4>
-                        <h5 class="card-subtitle">Written By: Ceola Daly</h5>
-                        <p class="card-text">An article on the stresses of the IB that no one talks about and how to handle them<br></p>
-                        <div class="card-btn"><a href="page48.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Interview with New US Ambassador</h4>
+                        <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
+                        <p class="card-text">An interview with the new US ambassador about his journey to where he is today and what he hopes for his future work in Belgium.<br></p>
+                        <div class="card-btn"><a href="page66.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
