--- a/page66.html
+++ b/page66.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-lg" data-rv-view="2453">
+  <section id="menu-lg" data-rv-view="1727">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">simple web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-li" data-rv-view="2455" style="background-image: url(assets/images/mbr-1920x1279.jpg);">
+<section class="engine"><a href="https://mobiri.se/e">make your own site for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-li" data-rv-view="1722" style="background-image: url(assets/images/mbr-1920x1279.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-lj" data-rv-view="2458" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-lj" data-rv-view="1725" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -107,7 +107,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-lk" data-rv-view="2460" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-lk" data-rv-view="1729" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -117,7 +117,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-ll" data-rv-view="2462" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-ll" data-rv-view="1731" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -127,7 +127,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-lm" data-rv-view="2464" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-lm" data-rv-view="1733" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -137,7 +137,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-ln" data-rv-view="2466" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-ln" data-rv-view="1735" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -147,7 +147,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-lo" data-rv-view="2468" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-lo" data-rv-view="1737" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -157,7 +157,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-lp" data-rv-view="2470" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-lp" data-rv-view="1739" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -167,7 +167,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content6-lr" data-rv-view="2474" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content6-lr" data-rv-view="1741" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -178,7 +178,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-lh" data-rv-view="2454" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-lh" data-rv-view="1743" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
