--- a/page19.html
+++ b/page19.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-4o" data-rv-view="769">
+  <section id="menu-4o" data-rv-view="341">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">amp templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="773" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobiri.se/k">how to develop free website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="345" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="776" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="348" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="771" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="343" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
