--- a/page22.html
+++ b/page22.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-5h" data-rv-view="810">
+  <section id="menu-5h" data-rv-view="382">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create your own site</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5j" data-rv-view="814" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-5j" data-rv-view="386" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5k" data-rv-view="817" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5k" data-rv-view="389" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5p" data-rv-view="819" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5p" data-rv-view="391" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5o" data-rv-view="821" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5o" data-rv-view="393" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -108,7 +108,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5t" data-rv-view="823" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5t" data-rv-view="395" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -125,7 +125,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5q" data-rv-view="825" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5q" data-rv-view="397" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -135,7 +135,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5u" data-rv-view="827" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5u" data-rv-view="399" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -152,7 +152,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5r" data-rv-view="829" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5r" data-rv-view="401" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -162,7 +162,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5v" data-rv-view="831" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-5v" data-rv-view="403" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -179,7 +179,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5s" data-rv-view="833" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5s" data-rv-view="405" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -189,7 +189,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5i" data-rv-view="812" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-5i" data-rv-view="384" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
