--- a/page35.html
+++ b/page35.html
@@ -23,9 +23,9 @@
   
 </head>
 <body>
-  <div id="menu-bq" custom-code="true" data-rv-view="1014"></div>
+  <div id="menu-bq" custom-code="true" data-rv-view="678"></div>
 
-<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="1017" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="681" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -50,7 +50,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="vtSlT+sZFK4U9udirUvxfmPPb9CpTO2TBlh0+M73CrmDropqdrZd7vxzRqPDIA1hEPbCyG4tWqxWEAhqdNbDrnjCF3kS1xa8T9LXFlan03h0h+OAHsW1eix/67INrXun" data-form-email="true">
+                        <input type="hidden" value="MOYZW1ZpiECysX/4yVt0DSDAznt9d2Qv12xIBTjJlTMkJ6eyNy5AzudWvf+I302/ePI3NNnDOEF0O0Xk95jtIN5KVvMl4b9PfmDqly/h554RujfzrBpOSnkI0A7bT8Nt" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best free website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="1015" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobiri.se/g">how to build your own website</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="679" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
