--- a/page64.html
+++ b/page64.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-kj" data-rv-view="1774">
+  <section id="menu-kj" data-rv-view="1659">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/x">css templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-kl" data-rv-view="1778" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobiri.se/e">how to make a website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-kl" data-rv-view="1663" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-km" data-rv-view="1781" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-km" data-rv-view="1666" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-kk" data-rv-view="1776" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-kk" data-rv-view="1661" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
