--- a/Arts.html
+++ b/Arts.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="236" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/h">how to create your own web page for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="236" style="background-color: rgb(23, 64, 52);">
 
     
 
