--- a/Comedy.html
+++ b/Comedy.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">free portfolio site templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-d7" data-rv-view="117" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/l">free website templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-d7" data-rv-view="117" style="background-color: rgb(23, 64, 52);">
 
     
 
