--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="47" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/s">free bootstrap themes</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="47" style="background-color: rgb(23, 64, 52);">
 
     
 
