--- a/page32.html
+++ b/page32.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">html website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9v" data-rv-view="599" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9v" data-rv-view="599" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
