--- a/page36.html
+++ b/page36.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader6 mbr-parallax-background mbr-after-navbar" id="extHeader6-ca" data-rv-view="690" style="background-image: url(assets/images/picture1-1012x659.png);">
+<section class="engine"><a href="https://mobiri.se/g">build a site</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader6 mbr-parallax-background mbr-after-navbar" id="extHeader6-ca" data-rv-view="690" style="background-image: url(assets/images/picture1-1012x659.png);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(255, 255, 255);">
 
