--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -43,7 +43,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Entertainment</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">develop own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="99" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/z">best free website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="99" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -68,14 +68,14 @@
                     <div class="mbr-table-md-up">
                         
                         <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/mbr-2-1400x934.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/mbr-1-1400x932.jpg"></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
-                            <h3 class="mbr-section-title display-2">Reading Suggestions for the Spring and Summer Season</h3>
+                            <h3 class="mbr-section-title display-2">"For Dummies" Series</h3>
 
                             <div class="mbr-section-text">
-                                <p>A great list of books to read this spring and summer!<br><br>By: Ilinca Maria-Manda</p>
+                                <p>This is a series of article "episodes" explaining complicated concepts in uncomplicated ways.<br><br>Written by Various Writers</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page56.html">MORE</a></div>
