--- a/page59.html
+++ b/page59.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Entertainment</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-iq" data-rv-view="1334" style="background-color: rgb(16, 12, 12);">
+<section class="engine"><a href="https://mobiri.se/l">free website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-iq" data-rv-view="1334" style="background-color: rgb(16, 12, 12);">
 
     
 
