--- a/page65.html
+++ b/page65.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="page44.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="page53.html">Clubs</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Entertainment</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free website builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-kp" data-rv-view="1668" style="background-image: url(assets/images/mbr-1920x1079.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobiri.se/z">best website templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-kp" data-rv-view="1668" style="background-image: url(assets/images/mbr-1920x1079.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
