--- a/Archives.html
+++ b/Archives.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/m">web design templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="10" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="10" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -597,7 +597,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/stj-lions-circle-600x6006.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/stj-lions-circle-600x6009.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">The 2017-2018 Guide to St. John's</h4>
                         <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn with various contributors</h5>
