--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best free website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="99" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="99" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -78,7 +78,7 @@
                                 <p>This is a series of article "episodes" explaining complicated concepts in uncomplicated ways.<br><br>Written by Various Writers</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page56.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page67.html">MORE</a></div>
 
                         </div>
 
